lab1/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> NAME EQUALS expression
Rule 2     statement -> expression
Rule 3     expression -> expression PLUS expression
Rule 4     expression -> expression MINUS expression
Rule 5     expression -> expression TIMES expression
Rule 6     expression -> expression DIVIDE expression
Rule 7     expression -> expression EXP expression
Rule 8     expression -> expression P expression
Rule 9     expression -> expression M expression
Rule 10    expression -> expression T expression
Rule 11    expression -> expression D expression
Rule 12    expression -> expression E expression
Rule 13    expression -> MINUS expression
Rule 14    expression -> M expression
Rule 15    expression -> LPAREN expression RPAREN
Rule 16    expression -> NUMBER
Rule 17    expression -> NAME
Rule 18    expression -> dval ATHOU hval
Rule 19    expression -> dval ATHOU dval
Rule 20    expression -> dval ATHOU af
Rule 21    expression -> af ATHOU hval
Rule 22    expression -> af ATHOU dval
Rule 23    expression -> af ATHOU af
Rule 24    expression -> dval ATHOU
Rule 25    expression -> af ATHOU
Rule 26    expression -> hval
Rule 27    expression -> dval
Rule 28    expression -> af
Rule 29    hval -> af AHUN dval
Rule 30    hval -> af AHUN af
Rule 31    hval -> af AHUN
Rule 32    dval -> ARVAL af
Rule 33    dval -> ARVAL
Rule 34    dval -> ATWO
Rule 35    af -> AFACE

Terminals, with rules where they appear

AFACE                : 35
AHUN                 : 29 30 31
ARVAL                : 32 33
ATHOU                : 18 19 20 21 22 23 24 25
ATWO                 : 34
D                    : 11
DIVIDE               : 6
E                    : 12
EQUALS               : 1
EXP                  : 7
LPAREN               : 15
M                    : 9 14
MINUS                : 4 13
NAME                 : 1 17
NUMBER               : 16
P                    : 8
PLUS                 : 3
RPAREN               : 15
T                    : 10
TIMES                : 5
error                : 

Nonterminals, with rules where they appear

af                   : 20 21 22 23 23 25 28 29 30 30 31 32
dval                 : 18 19 19 20 22 24 27 29
expression           : 1 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 14 15
hval                 : 18 21 26
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . NAME EQUALS expression
    (2) statement -> . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression EXP expression
    (8) expression -> . expression P expression
    (9) expression -> . expression M expression
    (10) expression -> . expression T expression
    (11) expression -> . expression D expression
    (12) expression -> . expression E expression
    (13) expression -> . MINUS expression
    (14) expression -> . M expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME
    (18) expression -> . dval ATHOU hval
    (19) expression -> . dval ATHOU dval
    (20) expression -> . dval ATHOU af
    (21) expression -> . af ATHOU hval
    (22) expression -> . af ATHOU dval
    (23) expression -> . af ATHOU af
    (24) expression -> . dval ATHOU
    (25) expression -> . af ATHOU
    (26) expression -> . hval
    (27) expression -> . dval
    (28) expression -> . af
    (32) dval -> . ARVAL af
    (33) dval -> . ARVAL
    (34) dval -> . ATWO
    (35) af -> . AFACE
    (29) hval -> . af AHUN dval
    (30) hval -> . af AHUN af
    (31) hval -> . af AHUN

    NAME            shift and go to state 10
    MINUS           shift and go to state 4
    M               shift and go to state 7
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 3
    ARVAL           shift and go to state 6
    ATWO            shift and go to state 13
    AFACE           shift and go to state 11

    hval                           shift and go to state 2
    expression                     shift and go to state 12
    dval                           shift and go to state 9
    statement                      shift and go to state 5
    af                             shift and go to state 1

state 1

    (21) expression -> af . ATHOU hval
    (22) expression -> af . ATHOU dval
    (23) expression -> af . ATHOU af
    (25) expression -> af . ATHOU
    (28) expression -> af .
    (29) hval -> af . AHUN dval
    (30) hval -> af . AHUN af
    (31) hval -> af . AHUN

    ATHOU           shift and go to state 14
    PLUS            reduce using rule 28 (expression -> af .)
    MINUS           reduce using rule 28 (expression -> af .)
    TIMES           reduce using rule 28 (expression -> af .)
    DIVIDE          reduce using rule 28 (expression -> af .)
    EXP             reduce using rule 28 (expression -> af .)
    P               reduce using rule 28 (expression -> af .)
    M               reduce using rule 28 (expression -> af .)
    T               reduce using rule 28 (expression -> af .)
    D               reduce using rule 28 (expression -> af .)
    E               reduce using rule 28 (expression -> af .)
    $end            reduce using rule 28 (expression -> af .)
    RPAREN          reduce using rule 28 (expression -> af .)
    AHUN            shift and go to state 15


state 2

    (26) expression -> hval .

    PLUS            reduce using rule 26 (expression -> hval .)
    MINUS           reduce using rule 26 (expression -> hval .)
    TIMES           reduce using rule 26 (expression -> hval .)
    DIVIDE          reduce using rule 26 (expression -> hval .)
    EXP             reduce using rule 26 (expression -> hval .)
    P               reduce using rule 26 (expression -> hval .)
    M               reduce using rule 26 (expression -> hval .)
    T               reduce using rule 26 (expression -> hval .)
    D               reduce using rule 26 (expression -> hval .)
    E               reduce using rule 26 (expression -> hval .)
    $end            reduce using rule 26 (expression -> hval .)
    RPAREN          reduce using rule 26 (expression -> hval .)


state 3

    (16) expression -> NUMBER .

    PLUS            reduce using rule 16 (expression -> NUMBER .)
    MINUS           reduce using rule 16 (expression -> NUMBER .)
    TIMES           reduce using rule 16 (expression -> NUMBER .)
    DIVIDE          reduce using rule 16 (expression -> NUMBER .)
    EXP             reduce using rule 16 (expression -> NUMBER .)
    P               reduce using rule 16 (expression -> NUMBER .)
    M               reduce using rule 16 (expression -> NUMBER .)
    T               reduce using rule 16 (expression -> NUMBER .)
    D               reduce using rule 16 (expression -> NUMBER .)
    E               reduce using rule 16 (expression -> NUMBER .)
    $end            reduce using rule 16 (expression -> NUMBER .)
    RPAREN          reduce using rule 16 (expression -> NUMBER .)


state 4

    (13) expression -> MINUS . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression EXP expression
    (8) expression -> . expression P expression
    (9) expression -> . expression M expression
    (10) expression -> . expression T expression
    (11) expression -> . expression D expression
    (12) expression -> . expression E expression
    (13) expression -> . MINUS expression
    (14) expression -> . M expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME
    (18) expression -> . dval ATHOU hval
    (19) expression -> . dval ATHOU dval
    (20) expression -> . dval ATHOU af
    (21) expression -> . af ATHOU hval
    (22) expression -> . af ATHOU dval
    (23) expression -> . af ATHOU af
    (24) expression -> . dval ATHOU
    (25) expression -> . af ATHOU
    (26) expression -> . hval
    (27) expression -> . dval
    (28) expression -> . af
    (32) dval -> . ARVAL af
    (33) dval -> . ARVAL
    (34) dval -> . ATWO
    (35) af -> . AFACE
    (29) hval -> . af AHUN dval
    (30) hval -> . af AHUN af
    (31) hval -> . af AHUN

    MINUS           shift and go to state 4
    M               shift and go to state 7
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16
    ARVAL           shift and go to state 6
    ATWO            shift and go to state 13
    AFACE           shift and go to state 11

    hval                           shift and go to state 2
    expression                     shift and go to state 17
    dval                           shift and go to state 9
    af                             shift and go to state 1

state 5

    (0) S' -> statement .



state 6

    (32) dval -> ARVAL . af
    (33) dval -> ARVAL .
    (35) af -> . AFACE

    ATHOU           reduce using rule 33 (dval -> ARVAL .)
    PLUS            reduce using rule 33 (dval -> ARVAL .)
    MINUS           reduce using rule 33 (dval -> ARVAL .)
    TIMES           reduce using rule 33 (dval -> ARVAL .)
    DIVIDE          reduce using rule 33 (dval -> ARVAL .)
    EXP             reduce using rule 33 (dval -> ARVAL .)
    P               reduce using rule 33 (dval -> ARVAL .)
    M               reduce using rule 33 (dval -> ARVAL .)
    T               reduce using rule 33 (dval -> ARVAL .)
    D               reduce using rule 33 (dval -> ARVAL .)
    E               reduce using rule 33 (dval -> ARVAL .)
    $end            reduce using rule 33 (dval -> ARVAL .)
    RPAREN          reduce using rule 33 (dval -> ARVAL .)
    AFACE           shift and go to state 11

    af                             shift and go to state 18

state 7

    (14) expression -> M . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression EXP expression
    (8) expression -> . expression P expression
    (9) expression -> . expression M expression
    (10) expression -> . expression T expression
    (11) expression -> . expression D expression
    (12) expression -> . expression E expression
    (13) expression -> . MINUS expression
    (14) expression -> . M expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME
    (18) expression -> . dval ATHOU hval
    (19) expression -> . dval ATHOU dval
    (20) expression -> . dval ATHOU af
    (21) expression -> . af ATHOU hval
    (22) expression -> . af ATHOU dval
    (23) expression -> . af ATHOU af
    (24) expression -> . dval ATHOU
    (25) expression -> . af ATHOU
    (26) expression -> . hval
    (27) expression -> . dval
    (28) expression -> . af
    (32) dval -> . ARVAL af
    (33) dval -> . ARVAL
    (34) dval -> . ATWO
    (35) af -> . AFACE
    (29) hval -> . af AHUN dval
    (30) hval -> . af AHUN af
    (31) hval -> . af AHUN

    MINUS           shift and go to state 4
    M               shift and go to state 7
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16
    ARVAL           shift and go to state 6
    ATWO            shift and go to state 13
    AFACE           shift and go to state 11

    hval                           shift and go to state 2
    expression                     shift and go to state 19
    dval                           shift and go to state 9
    af                             shift and go to state 1

state 8

    (15) expression -> LPAREN . expression RPAREN
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression EXP expression
    (8) expression -> . expression P expression
    (9) expression -> . expression M expression
    (10) expression -> . expression T expression
    (11) expression -> . expression D expression
    (12) expression -> . expression E expression
    (13) expression -> . MINUS expression
    (14) expression -> . M expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME
    (18) expression -> . dval ATHOU hval
    (19) expression -> . dval ATHOU dval
    (20) expression -> . dval ATHOU af
    (21) expression -> . af ATHOU hval
    (22) expression -> . af ATHOU dval
    (23) expression -> . af ATHOU af
    (24) expression -> . dval ATHOU
    (25) expression -> . af ATHOU
    (26) expression -> . hval
    (27) expression -> . dval
    (28) expression -> . af
    (32) dval -> . ARVAL af
    (33) dval -> . ARVAL
    (34) dval -> . ATWO
    (35) af -> . AFACE
    (29) hval -> . af AHUN dval
    (30) hval -> . af AHUN af
    (31) hval -> . af AHUN

    MINUS           shift and go to state 4
    M               shift and go to state 7
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16
    ARVAL           shift and go to state 6
    ATWO            shift and go to state 13
    AFACE           shift and go to state 11

    hval                           shift and go to state 2
    expression                     shift and go to state 20
    dval                           shift and go to state 9
    af                             shift and go to state 1

state 9

    (18) expression -> dval . ATHOU hval
    (19) expression -> dval . ATHOU dval
    (20) expression -> dval . ATHOU af
    (24) expression -> dval . ATHOU
    (27) expression -> dval .

    ATHOU           shift and go to state 21
    PLUS            reduce using rule 27 (expression -> dval .)
    MINUS           reduce using rule 27 (expression -> dval .)
    TIMES           reduce using rule 27 (expression -> dval .)
    DIVIDE          reduce using rule 27 (expression -> dval .)
    EXP             reduce using rule 27 (expression -> dval .)
    P               reduce using rule 27 (expression -> dval .)
    M               reduce using rule 27 (expression -> dval .)
    T               reduce using rule 27 (expression -> dval .)
    D               reduce using rule 27 (expression -> dval .)
    E               reduce using rule 27 (expression -> dval .)
    $end            reduce using rule 27 (expression -> dval .)
    RPAREN          reduce using rule 27 (expression -> dval .)


state 10

    (1) statement -> NAME . EQUALS expression
    (17) expression -> NAME .

    EQUALS          shift and go to state 22
    PLUS            reduce using rule 17 (expression -> NAME .)
    MINUS           reduce using rule 17 (expression -> NAME .)
    TIMES           reduce using rule 17 (expression -> NAME .)
    DIVIDE          reduce using rule 17 (expression -> NAME .)
    EXP             reduce using rule 17 (expression -> NAME .)
    P               reduce using rule 17 (expression -> NAME .)
    M               reduce using rule 17 (expression -> NAME .)
    T               reduce using rule 17 (expression -> NAME .)
    D               reduce using rule 17 (expression -> NAME .)
    E               reduce using rule 17 (expression -> NAME .)
    $end            reduce using rule 17 (expression -> NAME .)


state 11

    (35) af -> AFACE .

    ATHOU           reduce using rule 35 (af -> AFACE .)
    AHUN            reduce using rule 35 (af -> AFACE .)
    PLUS            reduce using rule 35 (af -> AFACE .)
    MINUS           reduce using rule 35 (af -> AFACE .)
    TIMES           reduce using rule 35 (af -> AFACE .)
    DIVIDE          reduce using rule 35 (af -> AFACE .)
    EXP             reduce using rule 35 (af -> AFACE .)
    P               reduce using rule 35 (af -> AFACE .)
    M               reduce using rule 35 (af -> AFACE .)
    T               reduce using rule 35 (af -> AFACE .)
    D               reduce using rule 35 (af -> AFACE .)
    E               reduce using rule 35 (af -> AFACE .)
    $end            reduce using rule 35 (af -> AFACE .)
    RPAREN          reduce using rule 35 (af -> AFACE .)


state 12

    (2) statement -> expression .
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . EXP expression
    (8) expression -> expression . P expression
    (9) expression -> expression . M expression
    (10) expression -> expression . T expression
    (11) expression -> expression . D expression
    (12) expression -> expression . E expression

    $end            reduce using rule 2 (statement -> expression .)
    PLUS            shift and go to state 28
    MINUS           shift and go to state 31
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 24
    EXP             shift and go to state 30
    P               shift and go to state 27
    M               shift and go to state 25
    T               shift and go to state 29
    D               shift and go to state 32
    E               shift and go to state 23


state 13

    (34) dval -> ATWO .

    ATHOU           reduce using rule 34 (dval -> ATWO .)
    PLUS            reduce using rule 34 (dval -> ATWO .)
    MINUS           reduce using rule 34 (dval -> ATWO .)
    TIMES           reduce using rule 34 (dval -> ATWO .)
    DIVIDE          reduce using rule 34 (dval -> ATWO .)
    EXP             reduce using rule 34 (dval -> ATWO .)
    P               reduce using rule 34 (dval -> ATWO .)
    M               reduce using rule 34 (dval -> ATWO .)
    T               reduce using rule 34 (dval -> ATWO .)
    D               reduce using rule 34 (dval -> ATWO .)
    E               reduce using rule 34 (dval -> ATWO .)
    $end            reduce using rule 34 (dval -> ATWO .)
    RPAREN          reduce using rule 34 (dval -> ATWO .)


state 14

    (21) expression -> af ATHOU . hval
    (22) expression -> af ATHOU . dval
    (23) expression -> af ATHOU . af
    (25) expression -> af ATHOU .
    (29) hval -> . af AHUN dval
    (30) hval -> . af AHUN af
    (31) hval -> . af AHUN
    (32) dval -> . ARVAL af
    (33) dval -> . ARVAL
    (34) dval -> . ATWO
    (35) af -> . AFACE

    PLUS            reduce using rule 25 (expression -> af ATHOU .)
    MINUS           reduce using rule 25 (expression -> af ATHOU .)
    TIMES           reduce using rule 25 (expression -> af ATHOU .)
    DIVIDE          reduce using rule 25 (expression -> af ATHOU .)
    EXP             reduce using rule 25 (expression -> af ATHOU .)
    P               reduce using rule 25 (expression -> af ATHOU .)
    M               reduce using rule 25 (expression -> af ATHOU .)
    T               reduce using rule 25 (expression -> af ATHOU .)
    D               reduce using rule 25 (expression -> af ATHOU .)
    E               reduce using rule 25 (expression -> af ATHOU .)
    $end            reduce using rule 25 (expression -> af ATHOU .)
    RPAREN          reduce using rule 25 (expression -> af ATHOU .)
    ARVAL           shift and go to state 6
    ATWO            shift and go to state 13
    AFACE           shift and go to state 11

    hval                           shift and go to state 35
    dval                           shift and go to state 33
    af                             shift and go to state 34

state 15

    (29) hval -> af AHUN . dval
    (30) hval -> af AHUN . af
    (31) hval -> af AHUN .
    (32) dval -> . ARVAL af
    (33) dval -> . ARVAL
    (34) dval -> . ATWO
    (35) af -> . AFACE

    PLUS            reduce using rule 31 (hval -> af AHUN .)
    MINUS           reduce using rule 31 (hval -> af AHUN .)
    TIMES           reduce using rule 31 (hval -> af AHUN .)
    DIVIDE          reduce using rule 31 (hval -> af AHUN .)
    EXP             reduce using rule 31 (hval -> af AHUN .)
    P               reduce using rule 31 (hval -> af AHUN .)
    M               reduce using rule 31 (hval -> af AHUN .)
    T               reduce using rule 31 (hval -> af AHUN .)
    D               reduce using rule 31 (hval -> af AHUN .)
    E               reduce using rule 31 (hval -> af AHUN .)
    $end            reduce using rule 31 (hval -> af AHUN .)
    RPAREN          reduce using rule 31 (hval -> af AHUN .)
    ARVAL           shift and go to state 6
    ATWO            shift and go to state 13
    AFACE           shift and go to state 11

    dval                           shift and go to state 36
    af                             shift and go to state 37

state 16

    (17) expression -> NAME .

    PLUS            reduce using rule 17 (expression -> NAME .)
    MINUS           reduce using rule 17 (expression -> NAME .)
    TIMES           reduce using rule 17 (expression -> NAME .)
    DIVIDE          reduce using rule 17 (expression -> NAME .)
    EXP             reduce using rule 17 (expression -> NAME .)
    P               reduce using rule 17 (expression -> NAME .)
    M               reduce using rule 17 (expression -> NAME .)
    T               reduce using rule 17 (expression -> NAME .)
    D               reduce using rule 17 (expression -> NAME .)
    E               reduce using rule 17 (expression -> NAME .)
    $end            reduce using rule 17 (expression -> NAME .)
    RPAREN          reduce using rule 17 (expression -> NAME .)


state 17

    (13) expression -> MINUS expression .
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . EXP expression
    (8) expression -> expression . P expression
    (9) expression -> expression . M expression
    (10) expression -> expression . T expression
    (11) expression -> expression . D expression
    (12) expression -> expression . E expression

    PLUS            reduce using rule 13 (expression -> MINUS expression .)
    MINUS           reduce using rule 13 (expression -> MINUS expression .)
    P               reduce using rule 13 (expression -> MINUS expression .)
    M               reduce using rule 13 (expression -> MINUS expression .)
    $end            reduce using rule 13 (expression -> MINUS expression .)
    RPAREN          reduce using rule 13 (expression -> MINUS expression .)
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 24
    EXP             shift and go to state 30
    T               shift and go to state 29
    D               shift and go to state 32
    E               shift and go to state 23

  ! TIMES           [ reduce using rule 13 (expression -> MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 13 (expression -> MINUS expression .) ]
  ! EXP             [ reduce using rule 13 (expression -> MINUS expression .) ]
  ! T               [ reduce using rule 13 (expression -> MINUS expression .) ]
  ! D               [ reduce using rule 13 (expression -> MINUS expression .) ]
  ! E               [ reduce using rule 13 (expression -> MINUS expression .) ]
  ! PLUS            [ shift and go to state 28 ]
  ! MINUS           [ shift and go to state 31 ]
  ! P               [ shift and go to state 27 ]
  ! M               [ shift and go to state 25 ]


state 18

    (32) dval -> ARVAL af .

    ATHOU           reduce using rule 32 (dval -> ARVAL af .)
    PLUS            reduce using rule 32 (dval -> ARVAL af .)
    MINUS           reduce using rule 32 (dval -> ARVAL af .)
    TIMES           reduce using rule 32 (dval -> ARVAL af .)
    DIVIDE          reduce using rule 32 (dval -> ARVAL af .)
    EXP             reduce using rule 32 (dval -> ARVAL af .)
    P               reduce using rule 32 (dval -> ARVAL af .)
    M               reduce using rule 32 (dval -> ARVAL af .)
    T               reduce using rule 32 (dval -> ARVAL af .)
    D               reduce using rule 32 (dval -> ARVAL af .)
    E               reduce using rule 32 (dval -> ARVAL af .)
    $end            reduce using rule 32 (dval -> ARVAL af .)
    RPAREN          reduce using rule 32 (dval -> ARVAL af .)


state 19

    (14) expression -> M expression .
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . EXP expression
    (8) expression -> expression . P expression
    (9) expression -> expression . M expression
    (10) expression -> expression . T expression
    (11) expression -> expression . D expression
    (12) expression -> expression . E expression

    PLUS            reduce using rule 14 (expression -> M expression .)
    MINUS           reduce using rule 14 (expression -> M expression .)
    TIMES           reduce using rule 14 (expression -> M expression .)
    DIVIDE          reduce using rule 14 (expression -> M expression .)
    EXP             reduce using rule 14 (expression -> M expression .)
    P               reduce using rule 14 (expression -> M expression .)
    M               reduce using rule 14 (expression -> M expression .)
    T               reduce using rule 14 (expression -> M expression .)
    D               reduce using rule 14 (expression -> M expression .)
    E               reduce using rule 14 (expression -> M expression .)
    $end            reduce using rule 14 (expression -> M expression .)
    RPAREN          reduce using rule 14 (expression -> M expression .)

  ! PLUS            [ shift and go to state 28 ]
  ! MINUS           [ shift and go to state 31 ]
  ! TIMES           [ shift and go to state 26 ]
  ! DIVIDE          [ shift and go to state 24 ]
  ! EXP             [ shift and go to state 30 ]
  ! P               [ shift and go to state 27 ]
  ! M               [ shift and go to state 25 ]
  ! T               [ shift and go to state 29 ]
  ! D               [ shift and go to state 32 ]
  ! E               [ shift and go to state 23 ]


state 20

    (15) expression -> LPAREN expression . RPAREN
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . EXP expression
    (8) expression -> expression . P expression
    (9) expression -> expression . M expression
    (10) expression -> expression . T expression
    (11) expression -> expression . D expression
    (12) expression -> expression . E expression

    RPAREN          shift and go to state 38
    PLUS            shift and go to state 28
    MINUS           shift and go to state 31
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 24
    EXP             shift and go to state 30
    P               shift and go to state 27
    M               shift and go to state 25
    T               shift and go to state 29
    D               shift and go to state 32
    E               shift and go to state 23


state 21

    (18) expression -> dval ATHOU . hval
    (19) expression -> dval ATHOU . dval
    (20) expression -> dval ATHOU . af
    (24) expression -> dval ATHOU .
    (29) hval -> . af AHUN dval
    (30) hval -> . af AHUN af
    (31) hval -> . af AHUN
    (32) dval -> . ARVAL af
    (33) dval -> . ARVAL
    (34) dval -> . ATWO
    (35) af -> . AFACE

    PLUS            reduce using rule 24 (expression -> dval ATHOU .)
    MINUS           reduce using rule 24 (expression -> dval ATHOU .)
    TIMES           reduce using rule 24 (expression -> dval ATHOU .)
    DIVIDE          reduce using rule 24 (expression -> dval ATHOU .)
    EXP             reduce using rule 24 (expression -> dval ATHOU .)
    P               reduce using rule 24 (expression -> dval ATHOU .)
    M               reduce using rule 24 (expression -> dval ATHOU .)
    T               reduce using rule 24 (expression -> dval ATHOU .)
    D               reduce using rule 24 (expression -> dval ATHOU .)
    E               reduce using rule 24 (expression -> dval ATHOU .)
    $end            reduce using rule 24 (expression -> dval ATHOU .)
    RPAREN          reduce using rule 24 (expression -> dval ATHOU .)
    ARVAL           shift and go to state 6
    ATWO            shift and go to state 13
    AFACE           shift and go to state 11

    hval                           shift and go to state 41
    dval                           shift and go to state 39
    af                             shift and go to state 40

state 22

    (1) statement -> NAME EQUALS . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression EXP expression
    (8) expression -> . expression P expression
    (9) expression -> . expression M expression
    (10) expression -> . expression T expression
    (11) expression -> . expression D expression
    (12) expression -> . expression E expression
    (13) expression -> . MINUS expression
    (14) expression -> . M expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME
    (18) expression -> . dval ATHOU hval
    (19) expression -> . dval ATHOU dval
    (20) expression -> . dval ATHOU af
    (21) expression -> . af ATHOU hval
    (22) expression -> . af ATHOU dval
    (23) expression -> . af ATHOU af
    (24) expression -> . dval ATHOU
    (25) expression -> . af ATHOU
    (26) expression -> . hval
    (27) expression -> . dval
    (28) expression -> . af
    (32) dval -> . ARVAL af
    (33) dval -> . ARVAL
    (34) dval -> . ATWO
    (35) af -> . AFACE
    (29) hval -> . af AHUN dval
    (30) hval -> . af AHUN af
    (31) hval -> . af AHUN
